<resources>
    <string name="app_name">Time Entry</string>
    <string name="text_enter_details">Enter details</string>
    <string name="text_login_failed">Login failed</string>
    <string name="text_authenticating">Authenticating &#8230;</string>

    <string name="text_valid_user_name">Enter a valid user name</string>
    <string name="text_password_error_message">Between 4 and 10 alphanumeric characters</string>
    <string name="text_username_not_registered">Username is not registered</string>
    <string name="text_incorrect_password">Incorrect password</string>

    <string name="text_header_time_entries">Time Entries</string>
    <string name="text_in_time_label">Time In : </string>
    <string name="text_out_time_label">Time Out : </string>
    <string name="text_date_label">Date : </string>
    <string name="text_alert_in_time">TimeIn field should not be empty</string>
    <string name="text_alert_project">Please select project</string>
    <string name="text_alert_topic">Please select topic</string>
    <string name="text_alert_out_time">TimeOut should be greater than TimeIn</string>
    <string name="text_alert_delete_title">Delete entry</string>
    <string name="text_alert_delete_message">Are you sure you want to delete this entry?</string>

    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_save">Save</string>
    <string name="text_note_label">Note</string>
    <string name="text_update">Update</string>
    <string name="text_project_label">Project : </string>
    <string name="text_topic_label">Topic : </string>
    <string name="text_time_spent_label">Time Spent : </string>

    <string-array name="projects_array">
        <item>Bluetooth</item>
        <item>Biometric Voting Machine</item>
        <item>Sensor technology</item>
    </string-array>

    <string-array name="bluetooth_array">
        <item>Wireless Technology</item>
        <item>Transmit</item>
        <item>Receive</item>
    </string-array>

    <string-array name="biometric_array">
        <item>Embedded system</item>
        <item>Biometric</item>
        <item>Rigging</item>
    </string-array>

    <string-array name="sensor_array">
        <item>Electronics system</item>
        <item>Pressure</item>
        <item>Heat</item>
    </string-array>
</resources>
